--- a/template.yaml
+++ b/template.yaml
@@ -1,9 +1,9 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: >
-  gitlabpoc
+  website-back-end
 
-  Sample SAM Template for gitlabpoc
+  Sample SAM Template for website-back-end
 
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
