--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,6 @@ production:
     - pip3 install aws-sam-cli --upgrade
   script:
     - sam build
-    - sam package --output-template-file packaged.yaml --s3-bucket <johnrteixeira.com-backend>
-    - sam deploy --template-file packaged.yaml --stack-name website-back-end --s3-bucket <johnrteixeira.com-backend> --capabilities CAPA
+    - sam package --output-template-file packaged.yaml --s3-bucket johnrteixeira.com-backend
+    - sam deploy --template-file packaged.yaml --stack-name website-back-end --s3-bucket johnrteixeira.com-backend --capabilities CAPA
   environment: production
