--- a/template.yaml
+++ b/template.yaml
@@ -14,7 +14,8 @@ Resources:
   HelloWorldFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
-      CodeUri: hello_world/
+      FunctionName: testingdoesthiswork?
+      CodeUri: prod/
       Handler: app.lambda_handler
       Runtime: python3.8
       Events:
