--- a/template.yaml
+++ b/template.yaml
@@ -34,7 +34,7 @@ Outputs:
     Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
   visitorCounterFunction: #not sure if this works
     Description: "Hello World Lambda Function ARN"
-    Value: !GetAtt HelloWorldFunction.Arn
+    Value: !GetAtt visitorCounterFunction.Arn
   visitorCounterFunctionIamRole:
     Description: "Implicit IAM Role created for Hello World function"
-    Value: !GetAtt HelloWorldFunctionRole.Arn
+    Value: !GetAtt visitorCounterFunctionRole.Arn
