--- a/template.yaml
+++ b/template.yaml
@@ -18,7 +18,9 @@ Resources:
       CodeUri: prod/
       Handler: app.lambda_handler
       Runtime: python3.8
-      Policies: AmazonDynamoDBFullAccess
+      Policies:
+      - AmazonDynamoDBFullAccess
+      - AWSLambdaBasicExecutionRole
       Events:
         visitorCounter:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
