--- a/template.yaml
+++ b/template.yaml
@@ -28,6 +28,13 @@ Resources:
             Path: /counter
             Method: get
 
+  MyLayer:
+    Type: AWS::Serverless::LayerVersion
+    Properties:
+      ContentUri: ./prod/requirements.txt
+      CompatibleRuntimes:
+        - python3.8
+
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
