--- a/template.yaml
+++ b/template.yaml
@@ -17,6 +17,22 @@ Globals:
 
 
 Resources:
+  Api:
+    Type: AWS::Serverless::Api
+    Properties:
+      StageName: prod
+      Cors:
+        AllowHeaders: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key,X-Amz-Security-Token'"
+        AllowOrigin: "'*'"
+        MaxAge: "'3600'"
+        AllowMethods: "'OPTIONS,POST,GET,PUT,DELETE'"
+      GatewayResponses:
+        DEFAULT_2xx:
+          ResponseParameters:
+            Access-Control-Allow-Headers: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key,X-Amz-Security-Token'"
+            Access-Control-Allow-Origin: "'*'"
+            Access-Control-Allow-Methods: "'OPTIONS,POST,GET,PUT,DELETE'"
+
   visitorCounterFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
@@ -32,7 +48,9 @@ Resources:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
             Path: /counter
-            Method: get
+            Method: GET
+            RestApiId: !Ref Api
+
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
