--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,11 @@ production:
   before_script:
     - pip3 install awscli --upgrade
     - pip3 install aws-sam-cli --upgrade
-    - pip3 install -r requirements.txt
+    - git clone https://github.com/boto/boto3.git
+    - cd boto3
+    - virtualenv venv
+    - . venv/bin/activate
+    - pip3 install -r /prod/requirements.txt
     - pip3 install -e .
   script:
     - sam build
