--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,14 +8,10 @@ production:
   before_script:
     - pip3 install awscli --upgrade
     - pip3 install aws-sam-cli --upgrade
-    - git clone https://github.com/boto/boto3.git
-    - cd boto3
-    - virtualenv venv
-    - . venv/bin/activate
     - pip3 install -r /prod/requirements.txt
-    - pip3 install -e .
   script:
     - sam build
+    - cd .aws-sam/build
     - sam package --output-template-file packaged.yaml --s3-bucket johnrteixeira.com-backend
     - sam deploy --template-file packaged.yaml --stack-name website-backend --s3-bucket johnrteixeira.com-backend --capabilities CAPABILITY_IAM --region ca-central-1
   environment: production
