--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,7 @@ production:
   before_script:
     - pip3 install awscli --upgrade
     - pip3 install aws-sam-cli --upgrade
-    - cd website-backend/prod
-    - pip3 install requirements.txt
+    - pip3 install boto3
   script:
     - sam build
     - cd .aws-sam/build
