--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ production:
     - pip3 install aws-sam-cli --upgrade
     - pip3 install boto3
   script:
-    - sam build && sam local invoke
+    - sam build --use-container && sam local invoke
     - sam package --output-template-file packaged.yaml --s3-bucket johnrteixeira.com-backend
     - sam deploy --template-file packaged.yaml --stack-name website-backend --s3-bucket johnrteixeira.com-backend --capabilities CAPABILITY_IAM --region ca-central-1
   environment: production
