--- a/template.yaml
+++ b/template.yaml
@@ -16,6 +16,11 @@ Resources:
     Properties:
       Name: visitorCounterApi
       StageName: prod
+      Policies:
+        - LambdaInvokePolicy:
+            functionName:
+              !GetAtt visitorCounterFunction.Arn
+
       Cors:
         AllowMethods: "'OPTIONS,POST,GET,PUT,DELETE'"
         AllowHeaders: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key,X-Amz-Security-Token'"
