--- a/template.yaml
+++ b/template.yaml
@@ -52,7 +52,7 @@ Resources:
     Type: AWS::Lambda::Permission
     Properties:
       Action: lambda:InvokeFunction
-      FunctionName: !GetAtt visitorCounterFunction
+      FunctionName: !GetAtt visitorCounterFunction.Arn
       Principal: "apigateway.amazonaws.com"
       SourceArn: !Sub "https://${visitorCounterApi}.execute-api.${AWS::Region}.amazonaws.com/prod/{proxy}+/GET/"
 
