--- a/template.yaml
+++ b/template.yaml
@@ -54,7 +54,7 @@ Resources:
       Action: lambda:InvokeFunction
       FunctionName: !GetAtt visitorCounterFunction.Arn
       Principal: "apigateway.amazonaws.com"
-      SourceArn: !Sub "https://${visitorCounterApi}.execute-api.${AWS::Region}.amazonaws.com/prod/{proxy}+/GET/"
+      SourceArn: !Sub "arn:aws:execute-api.${AWS::Region}:${AWS::AccountId}:${visitorCounterApi}/*/GET"
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
