--- a/template.yaml
+++ b/template.yaml
@@ -44,7 +44,7 @@ Resources:
         visitorCounter:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
-            Path: /{proxy+}
+            Path: /counter
             Method: GET
             RestApiId: !Ref visitorCounterApi
 
