--- a/template.yaml
+++ b/template.yaml
@@ -32,6 +32,7 @@ Resources:
   ViewCounterApi:
     Type: AWS::Serverless::Api
     Properties:
+      Name: ViewCounterApi
       Cors:
         AllowOrigin: "'*'"
       EndpointConfiguration: Regional
